# fastapi-motor-mongo-template

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
app/api/v1/: sample_resource.py
app/conf/: config.py  logging.py  logging.yaml
app/crud/: sample_resource.py
app/db/: __init__.py  db.py
app/schemas/: create_sample_resource.py  mongo_model.py  sample_resource_common.py
tests/: conftest.py  test_create_sample_resource.py  test_delete_sample_resource.py  test_get_sample_resource.py  test_health.py  test_update_sample_resource.py
